[레거시 코드 리팩터링 - 1단계] 후니(최재훈) 미션 제출합니다. (#209)
* chore: Java 17 버전으로 올린다

* test: ProductDao의 테스트 코드를 추가한다.

* test: productService 테스트 추가

* test: ProductController의 테스트 코드를 추가한다.

* test: MenuGroupDao의 테스트를 추가한다.

* test: MenuGroupService의 테스트를 추가한다.

* test: MenuGroupController의 테스트를 추가한다.

* refactor: Controller 테스트 방식 변경

* test: MenuDao의 테스트를 추가한다.

* test: MenuProductDao 테스트 추가

* test: MenuService 테스트 추가

* test: MenuController 테스트 추가

* test: TableGroupDao 테스트 추가

* test: OrderTableDao 테스트 추가

* test: OrderDao 테스트 추가

* test: OrderLineItem 테스트 추가

* test: TableGroupService 테스트 추가

* test: TableGroupController 테스트 추가

* test: TableService 테스트 추가

* test: TableController 테스트 추가

* test: OrderService 테스트 추가

* test: OrderController 테스트 추가

* docs: 요구사항 정리

* chore: 테스트 빌드시 init 데이터 제거

* test: 테스트 수정 및 남아있는 데이터 제거